Fix article grid vertical overflow
fixed the problem when the article grid overflow out of the main and
body when viewport is narrow and you scroll down

--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ body {
   font-family: Armata, var(--fallback-font-stack);
   font-size: 0.9rem;
   display: grid;
-  grid-template-columns: 250px 1fr 300px;
+  /* grid-template-columns: 250px 1fr 300px; */
+  grid-template-columns: minmax(230px, 1fr) minmax(300px, 1200px) minmax(270px, 1fr);
   grid-template-rows: 80px 35px 1fr 1fr;
   height: 100vh;
 }
@@ -210,6 +211,7 @@ main {
   grid-row: 2 / -1;
   display: grid;
   grid-template-rows: 35px;
+  max-height: max-content;
 }
 
 .project-nav {
@@ -272,8 +274,9 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   background-color: var(--dark-bg-color-secondary);
   grid-row: 2;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-template-rows: repeat(auto-fit, 200px);
+  grid-auto-rows: 200px;
   gap: 15px;
   padding: 20px;
 }
@@ -410,7 +413,6 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 .sidebar-section.trending {
   grid-row: 3;
-  align-content: center;
 }
 
 .trend-user-card a {
